# mQTL

./: .gitignore  LICENSE  compose.yml  pyproject.toml
backend/: Dockerfile  api_app.py  celery_app.py  pyproject.toml  tasks.py
backend/src/: analysis.py  db_operations.py  mQTL.py  src.py  url_utils.py
client/: Dockerfile  app.py  pyproject.toml
client/assets/: styles.css
client/pages/: dashboard.py  home.py  mqtl_explorer.py
client/pages/layouts/: mqtl_explorer_layout.py
client/pages/src/: connector.py  dashboard.py  mQTL_client.py
client/pages/utils/: utils.py
mongo_db/: fill_db.py  pyproject.toml
postgres_db/: fill_db.py
postgres_db/models/: models.py
