[tool.poetry]
name = "cellery"
version = "0.1.0"
description = ""
authors = ["JBinkowski <jan.binkowski96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
psycopg2-binary = "2.9.9"
sqlalchemy = "^2.0.27"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
