[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Jan Binkowski"]

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.6"
pandas = "^2.2.1"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.27"
uvicorn = "^0.27.1"
psycopg2-binary = "2.9.9"
openpyxl = "^3.1.2"
statsmodels = "^0.14.1"
pyarrow = "^15.0.0"
plotly = "^5.19.0"
pymongo = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
