[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["Jan Binkowski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
plotly = "^5.19.0"
dash = {extras = ["diskcache"], version = "^2.16.0"}
dash-bootstrap-components = "1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
