[tool.poetry]
name = "mongo-db"
version = "0.1.0"
description = ""
authors = ["Jan Binkowski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.6.2"
pandas = "^2.2.1"
tqdm = "^4.66.2"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
